# rust-catalog

./: Cargo.toml  README.md
src/: hash_file.rs  helpers.rs  lib.rs
