[package]
name = "catalog"
description = "A file-based map to store key/value pairs in a file and get them using binary search"

documentation = "https://wafflespeanut.github.io/rust-catalog/catalog/"
repository = "https://github.com/Wafflespeanut/rust-catalog"
readme = "README.md"
license = "MIT"

version = "0.1.2"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
keywords = ["map", "file", "binary-search", "key-value"]

[lib]
name = "catalog"

[dependencies]
siphasher = "0.2"
